deploy: a70a872072c39b5a72bd245978c1855e8ab32401

--- a/uart_8h.html
+++ b/uart_8h.html
@@ -238,9 +238,8 @@ Functions</h2></td></tr>
 <li>Data bits: 8</li>
 <li>Parity: Disabled</li>
 <li>Stop bits: 1</li>
-<li>Flow control: Disabled</li>
+<li>Flow control: Disabled </li>
 </ul>
-<dl class="section return"><dt>Returns</dt><dd>None </dd></dl>
 
 </div>
 </div>
@@ -273,7 +272,7 @@ Functions</h2></td></tr>
 <p>Thread-safe UART byte buffer transmission. </p>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramname">data</td><td>Pointer to the data buffer to send. </td></tr>
+    <tr><td class="paramname">str</td><td>Pointer to the data buffer to send. </td></tr>
     <tr><td class="paramname">len</td><td>Number of bytes to send. </td></tr>
   </table>
   </dd>
