--- a/gpio__driver_8h.html
+++ b/gpio__driver_8h.html
@@ -358,7 +358,7 @@ Functions</h2></td></tr>
 </ul>
 </dd></dl>
 <p>Updates the button structure:</p><ul>
-<li>last_state: last physical state</li>
+<li>previous_state: last physical state</li>
 <li>press_type: detected press type (short or long) </li>
 </ul>
 
