deploy: 7fcc334d7e46fe185184405bdc26207d0f19b09f

--- a/hv5622_8h.html
+++ b/hv5622_8h.html
@@ -135,7 +135,7 @@ Functions</h2></td></tr>
 </div><div class="memdoc">
 
 <p>Initialize the HV5622 shift register. </p>
-<p>Sets up SPI communication, configures LE and BL control pins, and sets their initial states. </p>
+<p>Sets up SPI communication, configures the LE control pin, and sets its initial state. BL is managed by PWM. </p>
 
 </div>
 </div>
