--- a/webserver_8c.html
+++ b/webserver_8c.html
@@ -96,6 +96,7 @@ $(document).ready(function(){initNavTree('webserver_8c.html',''); initResizable(
 </div><!--header-->
 <div class="contents">
 <div class="textblock"><code>#include &lt;errno.h&gt;</code><br />
+<code>#include &lt;string.h&gt;</code><br />
 <code>#include &quot;freertos/FreeRTOS.h&quot;</code><br />
 <code>#include &quot;freertos/task.h&quot;</code><br />
 <code>#include &quot;esp_wifi.h&quot;</code><br />
@@ -109,7 +110,7 @@ $(document).ready(function(){initNavTree('webserver_8c.html',''); initResizable(
 </div><div class="textblock"><div class="dynheader">
 Include dependency graph for webserver.c:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="webserver_8c__incl.svg" width="1358" height="300"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="webserver_8c__incl.svg" width="1452" height="300"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div><table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a id="define-members" name="define-members"></a>
